# Scan-Computer-Components

./: .gitignore  README.md  pyproject.toml
fetcher/: __main__.py  data.py  utils.py
pricing/: pricing_data.json
